language/tests/error/TypeError05.hashem
bebin azinja() {
  f = 1 < 2;
  f();  
}  
